Import Wrap library for bitcode wrapper.
source:
https://android.googlesource.com/platform/frameworks/compile/libbcc/
commit: 25b7205e16e422469da74f88e74ad79e7c284ac7

libbcc/bcinfo
libbcc/include/bcinfo

Cherry-picked from release_32 branch.
Patch by Lai Wei-Chih <Robert.Lai@mediatek.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -12,7 +12,7 @@ include $(LEVEL)/Makefile.config
 
 PARALLEL_DIRS := IR AsmParser Bitcode Archive Analysis Transforms CodeGen \
                  Target ExecutionEngine Linker MC Object Option DebugInfo \
-								 IRReader
+                 IRReader Wrap
 
 include $(LEVEL)/Makefile.common
 
