--- a/tools/Makefile
+++ b/tools/Makefile
@@ -36,7 +36,7 @@ PARALLEL_DIRS := opt llvm-as llvm-dis \
                  llvm-rtdyld llvm-dwarfdump llvm-cov \
                  llvm-size llvm-stress llvm-mcmarkup \
                  llvm-symbolizer obj2yaml yaml2obj \
-                 le32-none-ndk-link le32-none-ndk-strip
+                 le32-none-ndk-link le32-none-ndk-strip le32-none-ndk-translate
 
 # If Intel JIT Events support is configured, build an extra tool to test it.
 ifeq ($(USE_INTEL_JITEVENTS), 1)
