Shrink binary sizes when cross-compiling.
In cross-compiling mode:
* Currently, le32-none-ndk-translate don't need libLLVMWrap.
* Only build llc, le32-none-ndk-translate.
* Remove unnecessary libraries when building libLLVM.so.
* Don't build unittests since our libLLVM only has partial components now.
* Use -Os instead of -O3.
* Use -fdata-sections, -ffunction-sections, -fvisibility-inlines-hidden
  and -Wl,--gc-sections.

After this CL, we can reduce code size about 3MB on library.

Change-Id: I80f02fa5fe57a9cca4a5b50691ad83c719da5c59

--- a/autoconf/configure.ac
+++ b/autoconf/configure.ac
@@ -831,6 +831,9 @@ case "$withval" in
     esac ;;
   *) optimize_option="$withval" ;;
 esac
+if test "$LLVM_CROSS_COMPILING" = "1"; then
+  optimize_option="$optimize_option -Os"
+fi
 AC_SUBST(OPTIMIZE_OPTION,$optimize_option)
 AC_MSG_RESULT([$optimize_option])
 
@@ -843,6 +846,10 @@ case "$withval" in
   default) EXTRA_OPTIONS= ;;
   *) EXTRA_OPTIONS=$withval ;;
 esac
+if test "$LLVM_CROSS_COMPILING" = "1"; then
+  # For binary size reduction
+  EXTRA_OPTIONS="$EXTRA_OPTIONS -fdata-sections -ffunction-sections -fvisibility-inlines-hidden"
+fi
 AC_SUBST(EXTRA_OPTIONS,$EXTRA_OPTIONS)
 
 dnl Specify extra linker build options
@@ -854,6 +861,10 @@ case "$withval" in
   default) EXTRA_LD_OPTIONS= ;;
   *) EXTRA_LD_OPTIONS=$withval ;;
 esac
+if test "$LLVM_CROSS_COMPILING" = "1"; then
+  # Cooperative with -ffunction-sections, -fdata-sections
+  EXTRA_LD_OPTIONS="$EXTRA_LD_OPTIONS -Wl,--gc-sections"
+fi
 AC_SUBST(EXTRA_LD_OPTIONS,$EXTRA_LD_OPTIONS)
 
 dnl Allow specific bindings to be specified for building (or not)
