--- a/tools/Makefile
+++ b/tools/Makefile
@@ -37,6 +37,10 @@ PARALLEL_DIRS := opt llvm-as llvm-dis \
 	         llvm-size llvm-stress llvm-mcmarkup \
                  le32-none-ndk-link le32-none-ndk-strip le32-none-ndk-translate
 
+ifeq ($(LLVM_CROSS_COMPILING),1)
+  PARALLEL_DIRS := llc le32-none-ndk-translate
+endif
+
 # Let users override the set of tools to build from the command line.
 ifdef ONLY_TOOLS
   OPTIONAL_PARALLEL_DIRS :=
