Shrink binary sizes when cross-compiling.
In cross-compiling mode:
* Currently, le32-none-ndk-translate don't need libLLVMWrap.
* Only build llc, le32-none-ndk-translate.
* Remove unnecessary libraries when building libLLVM.so.
* Don't build unittests since our libLLVM only has partial components now.
* Use -Os instead of -O3.
* Use -fdata-sections, -ffunction-sections, -fvisibility-inlines-hidden
  and -Wl,--gc-sections.

After this CL, we can reduce code size about 3MB on library.

Cherry-picked from release_32 branch.

Change-Id: I5dcbce46c5b98975148ce3afe4023ad520ae59be

--- a/tools/le32-none-ndk-translate/Makefile
+++ b/tools/le32-none-ndk-translate/Makefile
@@ -2,10 +2,10 @@ LEVEL := ../..
 
 TOOLNAME = le32-none-ndk-translate
 
-LINK_COMPONENTS := asmparser bitreader bitwriter codegen \
-                   instrumentation ipo irreader linker selectiondag
+LINK_COMPONENTS := bitreader bitwriter
 
-USEDLIBS := LLVMWrap.a
+# We don't need this currently
+#USEDLIBS := LLVMWrap.a
 
 # This tool has no plugins, optimize startup time.
 TOOL_NO_EXPORTS := 1
